documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32NET.CS

        [DllImport("L13W32.DLL", EntryPoint = "_L13_ModeIsNotRT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ModeIsNotRT(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ModeIsNotSerial@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ModeIsNotSerial(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ModeIsPlay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ModeIsPlay(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ModeIsRT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ModeIsRT(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ModeIsSerial@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ModeIsSerial(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ModeRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_ModeRd(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ModeWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_ModeWr(UInt16 mode, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonBlkRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_MonBlkRd(ref UInt16 buf, UInt32 bufcount, ref UInt32 blkcnt, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonBlkRdEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_MonBlkRdEx(ref UInt16 buf, UInt32 bufcount, UInt32 maxblkcnt, ref UInt32 blkcnt, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_MonClear(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_MonConfigEx(UInt32 configval, UInt32 moncount, UInt16 cardnum, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonConfigExx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_MonConfigExx(UInt32 configval, UInt32 seqaddr, UInt32 moncount, UInt16 cardnum, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonFilterSAEx@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_MonFilterSAEx(Int32 taval, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonRdEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_MonRdEx(ref UInt16 buf, UInt16 bufcount, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonResume@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_MonResume(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_MonStart(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_MonStatus(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonStop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_MonStop(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgBlockRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_MsgBlockRd(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgBlockWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_MsgBlockWr(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_MsgCheck(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgCommRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_MsgCommRd(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgCommWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_MsgCommWr(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_MsgConfig(UInt32 configval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_MsgConfigEx(UInt32 configval, UInt16 cwd, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgCWD1Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_MsgCWD1Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgCWD1Wr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_MsgCWD1Wr(UInt16 cwd1, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgCWD2Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_MsgCWD2Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgCWD2Wr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_MsgCWD2Wr(UInt16 cwd2, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgErrorRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_MsgErrorRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgErrorWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_MsgErrorWr(UInt16 value, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgFlagRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_MsgFlagRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgFlagWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_MsgFlagWr(UInt16 msgflag, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgIsAccessed@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_MsgIsAccessed(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_MsgOptRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_MsgOptWr(UInt16 msgopt, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_MsgReset(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgSWD1Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_MsgSWD1Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgSWD2Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_MsgSWD2Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_Mul@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_Mul(UInt32 mula, UInt32 mulb);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_PlayClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_PlayClear(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_PlayConfigEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_PlayConfigEx(UInt32 configval, UInt32 playcount, UInt32 seqcount, UInt16 cardnum, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_PlayConfigExx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_PlayConfigExx(UInt32 configval, UInt32 playaddr, UInt32 playcount, UInt32 seqaddr, UInt32 seqcount, UInt16 cardnum, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_PlayWrEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_PlayWrEx(ref UInt16 buf, UInt16 bufcount, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_PortRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_PortRd(Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_PortWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_PortWr(UInt16 value, Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ProgRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_ProgRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ProgWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_ProgWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMFill@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_RAMFill(UInt16 value, UInt32 addrval, UInt32 countval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMIsDPM@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_RAMIsDPM(UInt32 addrval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMRdB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_RAMRdB(UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_RAMRdL(UInt32 addrval, UInt32 handleval);
